--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "arrow",
+  "name": "deft-angular-arrow",
   "main": "arrow.js",
   "version": "1.0.0",
-  "homepage": "https://github.com/Avoran/deft-arrow",
+  "homepage": "https://github.com/deft/deft-angular-arrow",
   "authors": [
     "Pieter Verloop <pieter@deft.nl>"
   ],
